--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Telegram ID Bot",
-    "description": "A bot to find telegram user id easily",
-    "repository": "https://github.com/BXBotz/Telegram-ID-Bot",
+    "description": "Basit Telegram Botu",
+    "repository": "https://github.com/alexx745alejandro/lioniddbot",
     "logo": "https://telegra.ph/file/d357ab91889c3aca7c679.jpg",
     "keywords": [
         "telegram",
